# FedDragon

./: .gitignore  Dockerfile  README.md  build.sh  centralized_baseline.py  export.sh  initial-git-commit.sh  process-test.py  process.py  requirements.txt  single_center_baseline.py  test.sh  train-test.sh
.github/: ISSUE_TEMPLATE.md
Federation/: pyproject.toml  util.py
Federation/Federation/: client.py  config.py  predict_from_federated_model.py  server.py  strategy.py
configs/: config.json
test-input/Task101_Example_sl_bin_clf-fold0/: nlp-test-dataset.json  nlp-training-dataset.json  nlp-validation-dataset.json
test-input/Task104_Example_ml_bin_clf-fold0/: nlp-test-dataset.json  nlp-training-dataset.json  nlp-validation-dataset.json
test-input/Task107_Example_ml_reg-fold0/: nlp-test-dataset.json  nlp-training-dataset.json  nlp-validation-dataset.json
test-input/Task108_Example_sl_ner-fold0/: nlp-test-dataset.json  nlp-training-dataset.json  nlp-validation-dataset.json
