[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-example"
version = "1.0.0"
description = "Federated Learning for the DRAGON challenge"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "skarrea"

[tool.flwr.app.components]
serverapp = "pytorch_example.server_app:app"
clientapp = "pytorch_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 1
fraction-evaluate = 1
local-epochs = 1
server-device = "cpu"

[tool.flwr.federations]
default = "local-sim"

[tool.flwr.federations.local-sim]
options.num-supernodes = 1
options.backend.client-resources.num-cpus = 10
options.backend.client-resources.num-gpus = 0.0 # ratio of VRAM a ClientApp has access to

[tool.flwr.federations.local-sim-gpu]
options.num-supernodes = 1
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.25

[tool.flwr.federations.local-debug]
options.num-supernodes = 1
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.0 # ratio of VRAM a ClientApp has access to
